--- a/ex05/ex05/ex05-Info.plist
+++ b/ex05/ex05/ex05-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>no.schibsted.test3.inhouse</string>
+	<string>no.example.ex05</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
